[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turktoken"
version = "0.0.1"
description = "A minimal tokenizer package for Turkish language."
requires-python = ">=3.7"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
